--- a/roles/frontend/vars/main.yaml
+++ b/roles/frontend/vars/main.yaml
@@ -1,3 +1,4 @@
 CATALOGUE_HOST: catalogue.daws84s.site
 USER_HOST: user.daws84s.site
 CART_HOST: cart.daws84s.site
+SHIPPING_HOST: shipping.daws84s.site
