--- a/roles/catalogue/tasks/main.yaml
+++ b/roles/catalogue/tasks/main.yaml
@@ -30,6 +30,7 @@
   ansible.builtin.shell: mongosh --host mongodb.daws84s.site < /app/db/master-data.js
   when: catalogue_output.stdout | int < 0
   ignore_errors: true
+  ignore_unreachable: true
 
 - name: systemd setup
   include_role:
