--- a/roles/catalogue/tasks/main.yaml
+++ b/roles/catalogue/tasks/main.yaml
@@ -26,11 +26,11 @@
   ansible.builtin.debug:
     msg: "{{ catalogue_output }}"
 
-- name: load products
-  ansible.builtin.shell: mongosh --host mongodb.daws84s.site < /app/db/master-data.js
-  when: catalogue_output.stdout | int < 0
-  ignore_errors: true
-  ignore_unreachable: true
+# - name: load products
+#   ansible.builtin.shell: mongosh --host mongodb.daws84s.site < /app/db/master-data.js
+#   when: catalogue_output.stdout | int < 0
+#   ignore_errors: true
+#   ignore_unreachable: true
 
 - name: systemd setup
   include_role:
