--- a/roles/catalogue/tasks/main.yaml
+++ b/roles/catalogue/tasks/main.yaml
@@ -22,11 +22,13 @@
   ansible.builtin.command: mongosh --host mongodb.daws84s.site --eval 'db.getMongo().getDBNames().indexOf("catalogue")'
   register: catalogue_output
   ignore_errors: true
+  ignore_unreachable: true
 
 - name: print catalogue output
   ansible.builtin.debug:
     msg: "{{ catalogue_output }}"
   ignore_errors: true
+  ignore_unreachable: true
 
 - name: load products
   ansible.builtin.shell: mongosh --host mongodb.daws84s.site < /app/db/master-data.js
@@ -39,9 +41,9 @@
     name: common
     tasks_from: systemd.yaml
 
-- name: app setup
+- name: Deployment
   tags: 
   - deployment
-  include_role:
+  import_role:
     name: common
     tasks_from: deployment
