--- a/main.yaml
+++ b/main.yaml
@@ -1,5 +1,5 @@
 - name: "configure {{ component }}"
   become: yes
-  hosts: "{{ component }}"
+  hosts: all
   roles: # this will automatically load a folder called roles in current working directory.
   - "{{ component }}"
